fixed icons on mobile device

--- a/css/style.css
+++ b/css/style.css
@@ -108,18 +108,6 @@ background-color:rgb(232, 70, 86);
   /* background: linear-gradient rgb(230, 148, 220), rgb(193, 67, 0); */
 }
 
-#git-icon {
-  right: 24px; 
-  bottom: 375px;
-  filter: drop-shadow(0 0 5px rgb(83, 81, 81));
-}
-
-#linked-icon {
-  right: -37px; 
-  bottom: 312px;
-  filter: drop-shadow(0 0 5px rgb(83, 81, 81));
-}
-
 #logo {
   height: 40px;
   margin-top: 10px;
@@ -295,6 +283,20 @@ p {
     
   }
 }
+@media only screen and (min-width : 992px) {
+  #git-icon {
+  right: 24px; 
+  bottom: 375px;
+  filter: drop-shadow(0 0 5px rgb(58, 54, 54));
+  }
+
+  #linked-icon {
+  right: -37px; 
+  bottom: 312px;
+  filter: drop-shadow(0 0 5px rgb(58, 54, 54));
+  }
+}
+
 
 @media only screen and (max-width : 768px) {
   .parallax-container .section {
@@ -393,4 +395,12 @@ p {
 
 footer.page-footer {
   margin: 0;
+}
+
+@media only screen and (max-width : 480px) {
+  #fhi {
+    width: 330px;
+    height: 200px;
+  }
+ 
 }
